# MatMulExamples

MatMulMPICannon/: CMakeLists.txt  Makefile  gnuplot.template  helper.c  helper.h  matmul.c  matrix.c  matrix.h  mpicomm.c  mpicomm.h  scalasca.sh
MatMulSerial/: CMakeLists.txt  Makefile  gnuplot.template  helper.c  helper.h  ltest.c  matmul.c  matmul.h  matrix.c  matrix.h  vtrun.sh
